--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ target/
 *.iws
 *.iml
 *.ipr
-./http-client.env.json
+http-client.env.json
+vars.env
 
 ### NetBeans ###
 /nbproject/private/
@@ -30,6 +31,8 @@ target/
 build/
 !**/src/main/**/build/
 !**/src/test/**/build/
+/grafana/data
+/prometheus/data
 
 ### VS Code ###
 .vscode/
