--- a/docker-compose.linux-local.yml
+++ b/docker-compose.linux-local.yml
@@ -57,6 +57,7 @@ services:
     environment:
       - TEST_SERVICE_IP=host.docker.internal
       - TOKENS_AUTH_HOSTS=77.234.215.138:34321,host.docker.internal:4321
+      - JAVA_TOOL_OPTIONS=-XX:-UseContainerSupport
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
